--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,21 @@
+.DS_Store
+.nodemonegnore
+npm-debug.log
+node_modules/
+test/
+public/lib/
+public/dev/
+public/dist/
+.bower-*/
+.idea/
+*.swp
+
 assets/
-
-.gitignore
-
 aspnet_client/
-
 TrainingLibrary/
-
-bower.json
-
-sftp-config.json
-
 web.config
-
 wwwroot.do
-
 home.htm
-
 Thumbs.db
-
 iis*
 
-npm-debug.log
-
-ChatProject*
-
-node_modules/
-
-*.swp
