--- a/package.json
+++ b/package.json
@@ -1,36 +1,46 @@
 {
-	"version": "0.0.0",
-	"private": true,
-	"name": "angular-phonecat",
-	"description": "A tutorial application for AngularJS",
-	"repository": "https://github.com/angular/angular-phonecat",
-	"license": "MIT",
-	"devDependencies": {
-		"karma": "^0.12.16",
-		"karma-chrome-launcher": "^0.1.4",
-		"karma-jasmine": "^0.1.5",
-		"protractor": "~1.0.0",
-		"http-server": "^0.6.1",
-		"tmp": "0.0.23",
-		"bower": "^1.3.1",
-		"shelljs": "^0.2.6"
-	},
-	"scripts": {
-		"postinstall": "bower install",
-
-		"prestart": "npm install",
-		"start": "http-server -a 0.0.0.0 -p 8000",
-
-		"pretest": "npm install",
-		"test": "node node_modules/karma/bin/karma start test/karma.conf.js",
-		"test-single-run": "node node_modules/karma/bin/karma start test/karma.conf.js  --single-run",
-
-		"preupdate-webdriver": "npm install",
-		"update-webdriver": "webdriver-manager update",
-
-		"preprotractor": "npm run update-webdriver",
-		"protractor": "protractor test/protractor-conf.js",
-
-		"update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
-	}
+  "version": "2.0.6",
+  "private": true,
+  "name": "TestCenterEMS",
+  "description": "An Employee Management System for the BYU Idaho Testing Center",
+  "license": "MIT",
+  "devDependencies": {
+    "bower": "^1.3.1",
+    "grunt-bump": "^0.3.1",
+    "grunt-concurrent": "~1.0.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-csslint": "^0.3.1",
+    "grunt-contrib-cssmin": "~0.10.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-karma": "~0.9.0",
+    "grunt-ng-annotate": "^0.10.0",
+    "grunt-script-link-tags": "^1.0.2",
+    "grunt-string-replace": "^1.2.0",
+    "http-server": "^0.6.1",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-jasmine": "^0.1.5",
+    "karma-safari-launcher": "^0.1.1",
+    "karma-tap-reporter": "~0.0.2",
+    "load-grunt-tasks": "~1.0.0",
+    "protractor": "~1.0.0",
+    "shelljs": "^0.2.6",
+    "tmp": "0.0.23"
+  },
+  "scripts": {
+    "postinstall": "bower install",
+    "prestart": "npm install",
+    "start": "http-server -a 0.0.0.0 -p 8000",
+    "pretest": "npm install",
+    "test": "node node_modules/karma/bin/karma start test/karma.conf.js",
+    "test-single-run": "node node_modules/karma/bin/karma start test/karma.conf.js  --single-run",
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "protractor test/protractor-conf.js",
+    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
+  }
 }
