--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,6 @@
     "angular-sanitize": "~1.2.23",
     "angular-strap": "~2.1.1",
     "angular-ui-router": "~0.2.10",
-    "angular-ui-select2": "~0.0.5",
     "bootstrap-additions": "~0.2.3",
     "bootstrap": "~3.2.0",
     "datejs": "~1.0.0-rc1",
@@ -36,8 +35,9 @@
     "angular-ui-select": "~0.9.6",
     "ui-select": "*",
     "angular-route": "~1.3.10",
-    "bower-breeze-angular": "~1.4.15",
-    "angular-sharepoint": "~0.3.4"
+    "angular-mocks": "~1.3.15",
+    "file-saver.js": "~1.20150304.1",
+    "angular-animate": "~1.3.15"
   },
   "resolutions": {
     "angular": "1.3.15"
