--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -27,7 +27,7 @@
 			"big",
 			"small"
 		], // List of tags that should not be reformatted
-		"wrap_line_length": 80 // Lines should wrap at next opportunity after this number of characters (0 disables)
+		"wrap_line_length": 0 // Lines should wrap at next opportunity after this number of characters (0 disables)
 	},
 	"css": {
 		"allowed_file_extensions": ["css", "scss", "sass", "less"],
@@ -52,7 +52,7 @@
 		],
 		"brace_style": "collapse", // [collapse|expand|end-expand|none] Put braces on the same line as control statements (default), or put braces on own line (Allman / ANSI style), or just put end braces on own line, or attempt to keep them where they are
 		"break_chained_methods": false, // Break chained method calls across subsequent lines
-		"end_with_newline": true, // End output with newline
+		"end_with_newline": false, // End output with newline
 		"indent_char": "\t", // Indentation character
 		"indent_level": 0, // Initial indentation level
 		"indent_size": 1, // Indentation size
