--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-karma": "~0.9.0",
     "grunt-ng-annotate": "^0.10.0",
     "grunt-script-link-tags": "^1.0.2",
+    "grunt-shell": "^1.1.2",
     "grunt-string-replace": "^1.2.0",
     "http-server": "^0.6.1",
     "karma": "^0.12.31",
