--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "3.0.3",
+  "version": "3.0.4-dev.0",
   "private": true,
   "name": "TestCenterEMS",
   "description": "An Employee Management System for the BYU Idaho Testing Center",
