--- a/bower.json
+++ b/bower.json
@@ -37,7 +37,8 @@
     "angular-route": "~1.3.10",
     "angular-mocks": "~1.3.15",
     "file-saver.js": "~1.20150304.1",
-    "angular-animate": "~1.3.15"
+    "angular-animate": "~1.3.15",
+    "ng-flow": "~2.6.1"
   },
   "resolutions": {
     "angular": "1.3.15"
