--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -34,9 +34,9 @@
 		"end_with_newline": false, // End output with newline
 		"indent_char": "\t", // Indentation character
 		"indent_size": 1, // Indentation size
-		"newline_between_rules": true, // Add a new line after every css rule
+		"newline_between_rules": false, // Add a new line after every css rule
 		"selector_separator": " ",
-		"selector_separator_newline": true // Separate selectors with newline or not (e.g. "a,\nbr" or "a, br")
+		"selector_separator_newline": false // Separate selectors with newline or not (e.g. "a,\nbr" or "a, br")
 	},
 	"js": {
 		"allowed_file_extensions": [
