Add virtual hosts and config files to repo

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ public/src/templates/
 .bower-*/
 .idea/
 *.swp
+logs/**
+testcenterems.bairdbunch.com.conf
+haven.c.byui.edu.conf
 
 assets/
 aspnet_client/
